# GeneFamily

./: .gitignore  README.md  setup.cfg
src/genefamily/: __init__.py  download_hmm.py  parse_longest_mrna.py
