[metadata]
name = genefamily
version = 0.1.0
author = Xiang Li
author_email = lixiang117423@gmail.com
description = Gene family analysis toolkit
long_description = file: README.md
url = https://github.com/yourusername/genefamily

[options]
packages = find:
install_requires =
    Biopython>=1.81

[options.entry_points]
console_scripts =
    parse_longest_mrna = genefamily.parse_longest_mrna:main